apps/homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: homepage
  annotations:
    cert-manager.io/cluster-issuer: homelab-ca
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Homepage
    gethomepage.dev/group: Apps
    gethomepage.dev/icon: homepage.png
    gethomepage.dev/description: This dashboard
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=homepage"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - homepage.home.arpa
      secretName: homepage-tls
  rules:
    - host: homepage.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 3000
